# SBITB150626

./: .bandit.yaml  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .trivyignore  1.0.11  3.1  5.0.0  FINAL_VERIFICATION_REPORT.md  FULL_VERIFICATION_REPORT.md  HEALTH_CHECK_PROTOCOL.md  INSTALLATION_GUIDE.md  INSTALLATION_VERIFICATION_REPORT.md  PHASE2_FINAL_VERIFICATION_REPORT.md  PHASE2_FULL_VERIFICATION_REPORT.md  PHASE2_VERIFICATION_REPORT.md  PHASE3_STRICT_VALIDATION_REPORT.md  README.md  SBITB_STRICT_VALIDATION_REPORT.md  TODO.md  VERIFICATION_GUIDE.md  bandit.yaml  bandit_final.json  bandit_out.txt  bandit_phase3.json  bandit_report.json  do_commit.bat  gitleaks_src_only.json  phase2_verification_report.json  pip-audit-allowlist.txt  pip_audit_phase3.json  pip_audit_report.json  pipaudit_final.txt  pyproject.toml  pytest_out.txt  requirements-before_install.json  requirements.txt  sbom.json  tmp_check_tables.py  (+14 more)
.benchmarks/Windows-CPython-3.12-64bit/: 0001_06c744b059e931aff2e118967694abf54096f489_20260626_081057_uncommited-changes.json  0002_06c744b059e931aff2e118967694abf54096f489_20260626_081651_uncommited-changes.json  0003_06c744b059e931aff2e118967694abf54096f489_20260626_082319_uncommited-changes.json
.hypothesis/constants/: 005be612047aa41d  009f0116eab76fe1  00af7731471577ae  0221ac1d32810d42  02fef9ef34523d7e  032bb05e75ff8d56  03ab1e6e6bb21915  040f8046eb428bf0  0422c269544453d1  0540902feba7d8dc  05f4e8f4e3a08397  06135b181aaf2013  063ad236dc2184fe  06710bd5f1e62c96  06be0d6626520495  06c88ddd0840a021  06d1031c13ac706a  06d230c8520aa8f9  075855f295301b1c  0768246cba53164c  07725d65d40f1d87  0848ff6e783e591e  09935b70eb85741b  0a02157e5cd284ab  0a3cad8c377726bc  0a72a3460e417c00  0a9bb0672d9ab5ca  0ab7e1ebbb5d5cd4  0ae3d19cd5a59535  0ae5ce98b4dda1ea  0af6d3576c429d34  0ba89159ef525d04  0bd64b2cffe126ec  0c2b3ee157292233  0c7ffaa2b237e61a  0d1267e2ac0c445d  0d323f18028503c9  0df92e267e413337  0e295bf05556737c  0e7db5a62ab41ba2  (+667 more)
.hypothesis/examples/04e6b3400353b141/: 0fafff3db64ba445  1b398ed12d76f495  209821e8ebbc0846  42c9afacc1413481  490374b86dde0776  5368d3f8c09c8a4e  729600a23ab3366d  b4596ebb32e3b22e  d1187385474d0ca9  dd314309d271feeb  e047fc365c932014  f15a1619a2b6d200
.hypothesis/examples/0fafff3db64ba445/: 01ac09e120a639b1  25aa5187928e41cb  4d4b996da33a877c  8294778a72ab9883  c504af928cd2d15b  fb10db7cabc52af2
.hypothesis/examples/1b398ed12d76f495/: 024cb6631f54d498  0d07a38e36075c18  131affe2f79e9ffb  1b989aa802983cb9  1f682db1070ba07e  24dca49c9778e800  26fa40d602fe0de4  2b6b881a754d320e  2bb0aac313dd0272  443b1a80d1724db0  57162ea5604034eb  5d19411b4aeab0ae  74fbf705debc75d5  75a3a47db050573e  84d3d03c7a88f8e8  9b4d496555c5bd17  adae4024d6d9a83c  d1724043a7607354  d51ff538aabf8066  e723552d9bb36024  e818ef5f3aaa7b50  e99c2ac311513278  ec566f078cbc57f3  ee244d9a52896625  f64c63e6d04463aa  fc92d147834fac55
.hypothesis/examples/490374b86dde0776/: ec779bd04f8ef7e1
.hypothesis/examples/5368d3f8c09c8a4e/: 584b86121063e0da
.hypothesis/examples/729600a23ab3366d/: 4371d0d9672cdf8a
.hypothesis/examples/b4596ebb32e3b22e/: 0228de8407b2f51e  03c8ed76bf1d67c9  04ce120d7749121f  101e79081d63414e  1962c0d7353cc82d  2361ac11bb5de5e7  30ede24f776dbc80  32116674b23a2b1c  36044c074f91ed92  3b2d1ee8af7f740a  4705ec8c0f7f8039  4aec10865372f8b8  503f69ad71f8e505  530e802ae77e4acc  5e01e7fd2dc8011a  6bc1e0b71f04ac30  6e53111312f2582a  787ffe2f044852f5  (+23 more)
SBITB-150626-Plan/: Dash Board.txt  Ph0-Instructions.md  Ph1-Base Technology Stack Setup.txt  Ph10-Risk Management & SEBI Compliance Layer.txt  Ph11-Signal Orchestration.txt  Ph12-Paper Trading.txt  Ph13-Cloud Deployment to Oracle Cloud Mumbai.txt  Ph14-Live Trading—Minimal Capital.txt  Ph15-MCX Commodity Extension.txt  Ph16-Multi-Broker Redundancy.txt  Ph17-DRL Agent.txt  Ph18-Continuous Improvement.txt  Ph2-F&O Data Pipeline + Greeks Implementation.txt  Ph3-TA & VA Engine.txt  Ph4-Market Strength Engine.txt  Ph5-First Strategy—Rule-Based Options.txt  Ph6-Backtesting Framework.txt  Ph7-Options Strike Auto-Selection + Adaptive Trailing Stop Loss.txt  Ph8-Sentiment Analysis Pipeline.txt  Ph9-RAG Knowledge Engine.txt  Plan.txt  SBITB150626.md  TESTING GATE MATRIX.txt
config/: secrets.env.example  settings.py
deployment/: .dockerignore  .env.docker.example  .env.docker.production  Dockerfile  alert.rules  apply_phase2.ps1  backup_timescaledb.bat  backup_timescaledb.sh  build.bat  build.sh  deploy_and_test.bat  docker-compose.yml  init.sql  init_phase2.sql  postgresql.conf  prometheus.yml  redis.conf  test_infrastructure.bat  test_infrastructure.sh  verify_phase2.bat
openalgo_strategy/: __init__.py  config.py  engine.py  indicators.py
scripts/: daily_reconcile.py  health_check.py  verify_all.py  verify_phase3.ps1  verify_phase3_deps.py
src/analysis/: __init__.py  depth.py  metrics.py  technical.py  volume.py
src/brokers/: __init__.py  angelone.py  base.py  dhan.py  zerodha.py
src/data/: WEBSOCKET_IMPLEMENTATION.md  WEBSOCKET_MODULE_README.md  __init__.py  event_log.py  handlers.py  historical.py  live_market_feed.py  metrics.py  option_chain.py  option_chain.py.backup  providers.py  storage.py  websocket.py
src/risk/: audit.py  compliance.py  kill_switch.py  manager.py  order_validator.py  order_validator.py.tmp  self_trade_prevention.py  var_engine.py
src/strategy/: base.py
tests/: conftest.py  test_event_log.py  test_interfaces.py
tests/bench/: __init__.py  test_greeks_perf.py  test_indicator_perf.py
tests/integration/: __init__.py  test_redis_timescaledb.py
tests/load/: __init__.py  locustfile.py
tests/property/: test_data_pipeline.py  test_indicators.py  test_option_greeks.py
tests/risk/: test_audit.py  test_compliance.py  test_kill_switch.py  test_manager.py
tests/scripts/: __init__.py  test_daily_reconcile.py  test_health_check.py
tests/unit/: test_broker_interface.py  test_greeks_computation.py  test_historical_pipeline.py  test_live_market_feed.py  test_openalgo_strategy.py  test_option_greeks.py  test_storage.py  test_technical.py  test_websocket.py
(+13 files in other folders)
