[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SBITB150626"
version = "0.1.0"
description = "Options Trading and Risk Management System"
authors = [
    {name = "nvmvl-KP", email = "example@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/npmvlKP/SBITB150626"
"Repository" = "https://github.com/npmvlKP/SBITB150626"

[tool.merge-formatting]
include_layout = ["ruff"]
format = "black"

dependencies = [
    "setuptools>=61.0",
    "wheel>=0.40.0",
]

[tool.setuptools.packages.find]
exclude = [
    "deployment*",
    "config*",
    "backups*",
    "SBITB-150626-Plan*",
    "tests*",
    "verify*",
]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-randomly>=3.15.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit>=1.7.9",
    "pip-audit>=2.7.0",
    "safety>=3.0.0",
    "pre-commit>=3.6.0",
    "hypothesis>=6.100.0",
]
# NOTE: gitleaks, detect-secrets, and trivy are NOT Python packages
# They are standalone binaries and must be installed separately:
# - gitleaks: https://github.com/gitleaks/gitleaks/releases
# - detect-secrets: pip install detect-secrets (standalone CLI)
# - trivy: https://aquasecurity.github.io/trivy/latest/getting-started/installation/

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "B",   # Bugbear
    "I",   # isort
    "ICN", # Import Conventions
    "C4",  # Commas
    "UP",  # Pyupgrade
    "Q",   # Flake8-quotes
    "B9",  # Bugbear - function calls
]
ignore = [
    "E501", # Line too long (handled by line-length)
    "B905", # zip() without an explicit strict= parameter
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"src/risk/*.py" = ["B006", "UP", "Q000", "B905"]
"tests/**/*.py" = ["T20"]
"verify_*.py" = ["S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
warn_no_return = true
follow_imports = "silent"

[tool.bandit]
exclude_dirs = ["tests", "verify_*", "backups"]
skips = ["B603", "B607", "B303", "B501", "B701"]
skips_regex = [
    "verify_",
    "\\btest\\b",
    "\\bexecut",
    "\\bconfig",
    "\\bbackups",
]
targets = ["src", ".", "config/settings.py"]
