[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SBITB150626"
version = "0.1.0"
description = "Options Trading and Risk Management System"
authors = [
    {name = "npmvl-KP", email = "example@example.com"},
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/npmvlKP/SBITB150626"
"Repository" = "https://github.com/npmvlKP/SBITB150626"

[tool.merge-formatting]
include_layout = ["ruff"]
format = "black"

# ============================================================
# FIXED DEPENDENCIES (per /sbitb150626 strict protocol)
# ============================================================
# Fixes applied:
# 1. vollib: Use 'vollib>=1.0.11' (canonical package, py_vollib is deprecated)
# 2. newspaper: Use 'newspaper4k>=0.9.2' (NOT newspaper3k - deprecated since 2020)
# 3. psycopg: Use 'psycopg[binary]>=3.1' (NOT psycopg2-binary - version conflict)
# 4. TA-Lib: Already installed as 0.6.8 with cp312 wheel
# 5. All wheels use cp312 (Python 3.12.7)
# ============================================================

dependencies = [
    # Build tools
    "setuptools>=61.0",
    "wheel>=0.40.0",

    # Core data processing
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "polars>=1.0.0",

    # Technical Analysis
    "TA-Lib>=0.6.8",  # Windows cp312 wheel already installed
    "ta>=0.11.0",     # Pure Python backup indicators

    # Options Greeks (fixed: vollib is canonical, py_vollib is deprecated)
    "vollib>=1.0.11",  # Canonical package - import as vollib.*
    "QuantLib>=1.36",  # Indian calendar, day-count conventions

    # Data sources
    "kiteconnect>=4.2.0",   # Zerodha API
    "jugaad-data>=0.20.0",  # NSE F&O bhavcopy

    # Database (fixed: psycopg3 async, NOT psycopg2-binary)
    "psycopg[binary]>=3.1",  # Async PostgreSQL driver (already installed 3.3.4)

    # Cache/Message Queue
    "redis>=5.0.0",

    # News/Sentiment (fixed: newspaper4k, NOT newspaper3k - deprecated)
    "newspaper4k>=0.9.2",  # Active fork of newspaper3k
    "feedparser>=6.0.0",
    "httpx>=0.27.0",

    # Logging
    "structlog>=24.0.0",

    # Time handling
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",

    # Utilities
    "orjson>=3.10.0",  # Fast JSON
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-randomly>=3.15.0",
    "hypothesis>=6.100.0",
    "pytest-benchmark>=4.0.0",  # Performance benchmarking

    # Code Quality
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit>=1.7.9",

    # Security scanning
    "pip-audit>=2.7.0",
    "safety>=3.0.0",
    "cyclonedx-bom>=4.0.0",  # SBOM generation

    # Pre-commit hooks
    "pre-commit>=3.6.0",
]

# Phase 2: Load testing (async WebSocket simulation)
backtest = [
    "locust>=2.20.0",  # Distributed load testing for WebSocket pipelines
]

# Phase 8-9: Sentiment Analysis + RAG (installed only when needed, not in Phase 1)
# This keeps Phase 1 setup fast by deferring ~8GB ML dependencies
ml = [
    "torch>=2.2.0",           # Deep learning framework (CPU version; GPU needs CUDA-specific install)
    "transformers>=4.40.0",   # HuggingFace transformers for NLP
    "sentence-transformers>=2.5.0",  # embeddings for RAG
    "faiss-cpu>=1.8.0",       # Vector similarity search
    "accelerate>=0.28.0",     # Training acceleration
]

# Phase 9: RAG Knowledge Engine (optional, requires ml group)
rag = [
    "chromadb>=0.4.22",       # Vector database for RAG
    "langchain>=0.1.0",       # RAG orchestration
    "langchain-community>=0.0.20",  # Community integrations
]

# Phase 9: Feature Store (optional, for production RAG pipelines)
feast = [
    "feast>=0.37.0",          # Feature store (requires running server; deferred to Phase 9)
]

# NOTE: The following are standalone binaries, NOT Python packages:
# - gitleaks: https://github.com/gitleaks/gitleaks/releases
# - detect-secrets: pip install detect-secrets (standalone CLI)
# - trivy: https://aquasecurity.github.io/trivy/latest/getting-started/installation/

[tool.setuptools.packages.find]
exclude = [
    "deployment*",
    "config*",
    "backups*",
    "SBITB-150626-Plan*",
    "tests*",
    "verify*",
]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "B",   # Bugbear
    "I",   # isort
    "ICN", # Import Conventions
    "C4",  # Commas
    "UP",  # Pyupgrade
    "Q",   # Flake8-quotes
    "B9",  # Bugbear - function calls
]
ignore = [
    "E501", # Line too long (handled by line-length)
    "B905", # zip() without an explicit strict= parameter
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"src/risk/*.py" = ["B006", "UP", "Q000", "B905"]
"tests/**/*.py" = ["T20"]
"verify_*.py" = ["S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
warn_no_return = true
follow_imports = "silent"

# mypy overrides for third-party libraries
[[tool.mypy.overrides]]
module = [
    "kiteconnect.*",
    "vollib.*",
    "py_vollib.*",
    "QuantLib.*",
    "talib.*",
    "ta.*",
    "newspaper.*",
    "feedparser.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "verify_*", "backups"]
skips = ["B603", "B607", "B303", "B501", "B701"]
skips_regex = [
    "verify_",
    "\\btest\\b",
    "\\bexecut",
    "\\bconfig",
    "\\bbackups",
]
targets = ["src", ".", "config/settings.py"]
