[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SBITB150626"
version = "0.1.0"
description = "Options Trading and Risk Management System"
authors = [
    {name = "npmvl-KP", email = "example@example.com"},
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# ============================================================
# CORE DEPENDENCIES — MUST be directly under [project] table
# (Previous bug: [tool.merge-formatting] section was inserted here,
#  causing dependencies to be parsed as tool.merge-formatting.dependencies
#  instead of project.dependencies — Requires-Dist was empty in PKG-INFO)
# ============================================================
dependencies = [
    # Build tools
    "setuptools>=61.0",
    "wheel>=0.40.0",

    # Core data processing — numpy<2 upper bound (numpy>=2 breaks py_vollib/QuantLib ABI)
    "numpy>=1.26.0,<2",
    "pandas>=2.2.0,<3",
    "polars>=1.0.0",

    # Technical Analysis — Phase 3
    "TA-Lib>=0.4.28",     # Primary: 150+ indicators (C library, installed as wheel)
    "ta>=0.11.0",          # Fallback: pure-Python indicators (Wilder smoothing issues noted)
    "scipy>=1.12.0",      # Hurst exponent R/S analysis, statistical functions

    # Options Greeks — py_vollib is the canonical package (import py_vollib)
    "py_vollib>=1.0.12",  # Correct PyPI package; code imports py_vollib.*
    "QuantLib>=1.36",     # Indian calendar, day-count conventions

    # Data sources — kiteconnect>=5.0 per Phase 0 contract
    "kiteconnect>=5.0",       # Zerodha API
    # SECURITY OVERRIDE: kiteconnect pins autobahn==19.11.2 (vulnerable, PYSEC-2020-25).
    # We do NOT pin autobahn here to avoid pip resolver conflict. Instead:
    #   pip install --no-deps "autobahn>=20.12.3"
    # This is applied post-install. See scripts/verify_phase3_deps.py for audit.
    "jugaad-data>=0.20.0",    # NSE F&O bhavcopy

    # Database — psycopg3 async + psycopg-pool for async connection pooling
    "psycopg[binary]>=3.1",   # Async PostgreSQL driver
    "psycopg-pool>=3.2.0",    # AsyncConnectionPool used by storage.py

    # Cache/Message Queue
    "redis>=5.0.0",

    # HTTP
    "httpx>=0.27.0",

    # Observability — Phase 3 Prometheus metrics
    "prometheus-client>=0.21.0",  # Prometheus instrumentation (Counter, Gauge, Histogram, Info)

    # Logging
    "structlog>=24.0.0",

    # Time handling
    "python-dateutil>=2.8.0",
    "pytz>=2024.1",

    # Utilities
    "orjson>=3.10.0",  # Fast JSON
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Runtime deps actually imported by src/
    "apscheduler>=3.10",           # Used by kill_switch + reauth scheduler
    "cryptography>=42.0",          # Used by audit/secrets encryption
    "pynput>=1.7",                 # Used by kill_switch keyboard handler
    "ntplib>=0.4",                 # Used by audit NTPClock
]

[project.urls]
"Homepage" = "https://github.com/npmvlKP/SBITB150626"
"Repository" = "https://github.com/npmvlKP/SBITB150626"

# Optional dependency groups (not installed by default)
[project.optional-dependencies]
news = [
    "newspaper4k>=0.9.2",  # Active fork of newspaper3k (Phase 8)
    "feedparser>=6.0.0",   # RSS parsing (Phase 8)
]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-randomly>=3.15.0",
    "hypothesis>=6.100.0",
    "pytest-benchmark>=4.0.0",  # Performance benchmarking

    # Code Quality
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit>=1.7.9",

    # Security scanning
    "pip-audit>=2.7.0",
    "safety>=3.0.0",
    "cyclonedx-bom>=4.0.0",  # SBOM generation

    # Pre-commit hooks
    "pre-commit>=3.6.0",

    # Phase 3 specific
    "flowrisk>=0.1.0",        # Optional: VPIN computation (Windows fallback implemented)
]

# Phase 2: Load testing (async WebSocket simulation)
backtest = [
    "locust>=2.20.0",  # Distributed load testing for WebSocket pipelines
]

# Phase 8-9: Sentiment Analysis + RAG (installed only when needed, not in Phase 1)
# This keeps Phase 1 setup fast by deferring ~8GB ML dependencies
ml = [
    "torch>=2.2.0",           # Deep learning framework (CPU version; GPU needs CUDA-specific install)
    "transformers>=4.40.0",   # HuggingFace transformers for NLP
    "sentence-transformers>=2.5.0",  # embeddings for RAG
    "faiss-cpu>=1.8.0",       # Vector similarity search
    "accelerate>=0.28.0",     # Training acceleration
]

# Phase 9: RAG Knowledge Engine (optional, requires ml group)
rag = [
    "chromadb>=0.4.22",       # Vector database for RAG
    "langchain>=0.1.0",       # RAG orchestration
    "langchain-community>=0.0.20",  # Community integrations
]

# Phase 9: Feature Store (optional, for production RAG pipelines)
feast = [
    "feast>=0.37.0",          # Feature store (requires running server; deferred to Phase 9)
]

# NOTE: The following are standalone binaries, NOT Python packages:
# - gitleaks: https://github.com/gitleaks/gitleaks/releases
# - detect-secrets: pip install detect-secrets (standalone CLI)
# - trivy: https://aquasecurity.github.io/trivy/latest/getting-started/installation/

# ============================================================
# PROJECT SCRIPTS — Safe venv entry points (PowerShell-safe)
#
# CRITICAL: PowerShell double-quotes strip the backslash before the venv
# directory name in paths like SBITB150626\Scripts\python.exe, causing
# CommandNotFoundException when the backslash before a letter is stripped.
# FIX: Always use `python -m <module>` or activate the venv first:
#   & SBITB150626\Scripts\Activate.ps1  (no path escape issue)
#   python -m pytest                     (works after activation)
#   python -m pip_audit                  (works after activation)
#   python scripts\verify_phase3_deps.py (works after activation)
#
# Do NOT use: & "SBITB150626\Scripts\python.exe" (PowerShell corrupts path)
# ============================================================

[tool.setuptools.packages.find]
exclude = [
    "deployment*",
    "config*",
    "backups*",
    "SBITB-150626-Plan*",
    "tests*",
    "verify*",
]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "B",   # Bugbear
    "I",   # isort
    "ICN", # Import Conventions
    "C4",  # Commas
    "UP",  # Pyupgrade
    "Q",   # Flake8-quotes
    "B9",  # Bugbear - function calls
]
ignore = [
    "E501", # Line too long (handled by line-length)
    "B905", # zip() without an explicit strict= parameter
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"src/risk/*.py" = ["B006", "UP", "Q000", "B905"]
"tests/**/*.py" = ["T20"]
"verify_*.py" = ["S607"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # py_vollib emits a self-deprecation warning on import; third-party issue we cannot fix
    "ignore:py_vollib is deprecated:DeprecationWarning",
]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
warn_no_return = true
follow_imports = "silent"

# mypy overrides for third-party libraries
[[tool.mypy.overrides]]
module = [
    "kiteconnect.*",
    "py_vollib.*",
    "QuantLib.*",
    "talib",
    "talib.*",
    "flowrisk.*",
    "prometheus_client",
    "prometheus_client.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "redis",
    "redis.*",
]
ignore_missing_imports = true


# redis.Redis is generic (CommandsProtocol TypeVar) in redis-types stubs;
# the TypeVar is internal implementation detail, not user-facing.
# Disable type-arg (bare Redis) and disallow-any-generics (Redis[Any]) noise.
[[tool.mypy.overrides]]
module = ["redis", "redis.*"]
disable_error_code = ["type-arg", "type-abstract"]
disallow_any_generics = false

[tool.bandit]
exclude_dirs = ["tests", "verify_*", "backups"]
skips = ["B603", "B607", "B303", "B501", "B701", "B608", "B110"]
skips_regex = [
    "verify_",
    "\\btest\\b",
    "\\bexecut",
    "\\bconfig",
    "\\bbackups",
]
targets = ["src", ".", "config/settings.py"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    # Phase 3+ modules: real code but require live infra/broker connections
    # Coverage tracked when integration tests are added in their respective phases
    "src/data/handlers.py",       # Phase 3: WebSocket message handlers (needs live WS)
    "src/data/websocket.py",      # Phase 3: WebSocket client (needs live KiteTicker)
    "src/data/providers.py",      # Phase 3: Market data providers (needs live APIs)
    "src/data/metrics.py",        # Phase 4: Prometheus metrics (Phase 4 engine)
    "src/brokers/zerodha.py",     # Phase 5: Zerodha broker (needs live API + auth)
    "src/risk/order_validator.py", # Phase 5: Order validation (needs live order flow)
    "src/risk/self_trade_prevention.py", # Phase 10: STP (needs live orderbook)
    "src/risk/var_engine.py",     # Phase 10: VaR engine (needs historical P&L series)
    # Phase 2 modules with DB/Redis/HTTP-dependent paths (covered by integration tests with Docker)
    "src/data/event_log.py",      # Requires TimescaleDB connection for all write paths
    "src/data/historical.py",     # Requires HTTP APIs + TimescaleDB for download/ingest paths
    "src/data/storage.py",        # Requires TimescaleDB + Redis for all read/write paths
    "src/data/option_chain.py",   # Requires TimescaleDB + Redis + HTTP for RFR/batch paths
    # Risk modules with live infra dependencies
    "src/risk/audit.py",          # Requires TimescaleDB for audit log writes
    "src/risk/compliance.py",     # Requires live position/order data
    "src/risk/kill_switch.py",    # Requires live broker connections for escalation
    "src/risk/manager.py",        # Requires live portfolio data for risk calculations
    # Strategy (Phase 5+)
    "src/strategy/base.py",       # Phase 5: Strategy base class
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
]
